...
                    android:layout_height="wrap_content"
                    android:text="@string/label_username"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/textview_current_password"
                    app:layout_constraintEnd_toStartOf="@+id/edittext_username"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.243" />

                <EditText
                    android:id="@+id/edittext_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:width="150dp"
                    app:layout_constraintBottom_toBottomOf="@+id/edittext_current_password"
                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
                    app:layout_constraintStart_toEndOf="@+id/textview_username"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.243"
                    />

...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:inputType="textPassword"
                    android:width="150dp"
                    app:layout_constraintBottom_toTopOf="@+id/edittext_email"
                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
                    app:layout_constraintStart_toEndOf="@+id/textview_current_password"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_username"
                    app:layout_constraintVertical_bias="0.85"
                    />

...
                    android:id="@+id/edittext_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:width="150dp"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_security_question"
                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
                    app:layout_constraintStart_toEndOf="@+id/textview_email"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_current_password"
                    app:layout_constraintVertical_bias="0.85"
                    />

...
                    android:backgroundTint="@color/light_blue"
                    android:minWidth="150dp"
                    android:minHeight="30dp"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    app:layout_constraintBottom_toTopOf="@+id/edittext_question_answer"
                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
                    app:layout_constraintStart_toEndOf="@+id/textview_security_question"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_email"
                    app:layout_constraintVertical_bias="0.85" />

                <TextView
...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:textSize="@dimen/medium_size"
            android:text="@string/label_register"
            android:layout_marginTop="100dp"
...
