<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spenditure.presentation.ViewProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_title_bar_height"
            >


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:src="@drawable/background_top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/app_title"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title_profile"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/small_size"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearlayout_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_profile_update"
                android:textColor="@color/white"
                android:layout_marginHorizontal="50dp"
                android:gravity="center_horizontal"
                android:textSize="@dimen/small_size"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                >

                <ImageView
                    android:id="@+id/imageview_edit_credentials"
                    android:layout_width="0dp"
                    android:layout_height="200dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/background_light_blue" />

                <TextView
                    android:id="@+id/textview_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_username"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/textview_current_password"
                    app:layout_constraintEnd_toStartOf="@+id/edittext_username"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.243" />

                <EditText
                    android:id="@+id/edittext_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:width="150dp"
                    app:layout_constraintBottom_toTopOf="@+id/edittext_current_password"
                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
                    app:layout_constraintStart_toEndOf="@+id/textview_username"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/textview_current_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_current_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/textview_new_password"
                    app:layout_constraintEnd_toStartOf="@+id/edittext_current_password"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                    app:layout_constraintTop_toBottomOf="@+id/textview_username"
                    app:layout_constraintVertical_bias="0.63" />

                <EditText
                    android:id="@+id/edittext_current_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:inputType="textPassword"
                    android:width="150dp"
                    app:layout_constraintBottom_toTopOf="@+id/edittext_new_password"
                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
                    app:layout_constraintStart_toEndOf="@+id/textview_current_password"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_username"
                    />

                <TextView
                    android:id="@+id/textview_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_new_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/edittext_new_password"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                    app:layout_constraintTop_toBottomOf="@+id/textview_current_password"
                    app:layout_constraintVertical_bias="0.63" />

                <EditText
                    android:id="@+id/edittext_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:inputType="textPassword"
                    android:width="150dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
                    app:layout_constraintStart_toEndOf="@+id/textview_new_password"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_current_password"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_save_changes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_blue"
                android:textSize="@dimen/small_size"
                android:text="@string/label_save_changes"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:textSize="@dimen/medium_size"
            android:text="@string/title_view_goals"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:textSize="@dimen/small_size"
        android:text="@string/label_logout"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>